# zeyrho-kv

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  maelstrom  rust-toolchain  treefmt.toml
.github/workflows/: ci.yaml
protos/: kv_store.proto  queue.proto  simple_queue.proto
src/: lib.rs  main.rs
src/chapter_1/: main.rs  simple_queue.rs
src/chapter_2/: README.md  client.rs  main.rs
src/echo/: main.rs
src/kv/: client.rs  main.rs
src/kv/chapter_1/: README.md  main.rs
src/kv/chapter_2/: client.rs  main.rs
src/kv_store/: kv_store.rs  mod.rs
src/mael/echo/: main.rs
src/queue/: client.rs  main.rs
src/queue/chapter_1/: main.rs
src/queue/chapter_2/: main.rs
src/queue/chapter_3/: README.md  client.rs  main.rs
src/queue/wal/: wal.rs
src/simple_queue/: mod.rs  simple_queue.rs
src/zeyrho/: b_tree.rs  kv_store.rs  mod.rs  queue.rs
src/zeyrho/btree/: mod.rs  node.rs  tree.rs
