[package]
name = "zeyrho"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chapter_1"
path = "src/chapter_1/main.rs"

[[bin]]
name = "chapter_2"
path = "src/chapter_2/main.rs"

[[bin]]
name = "echo"
path = "src/echo/main.rs"

[dependencies]
prost = "0.13.2"
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
nanoid = "0.4.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
maelstrom-node = "0.1.6"

[build-dependencies]
tonic-build = "0.12.2"
