[package]
name = "zeyrho"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "queue"
path = "src/queue/main.rs"

[[bin]]
name = "kv"
path = "src/kv/main.rs"

[[bin]]
name = "tree"
path = "src/main.rs"

[dependencies]
bytes = "1.10.1"
prost = "0.13.2"
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8.5"
nanoid = "0.4.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["serde_derive", "derive"] }

[build-dependencies]
tonic-build = "0.12.2"

[dev-dependencies]
tempfile = "3.2.0"
